objects/chargebeeapps__CB_Subscription__c.object
<CustomObject>
    <description>CB Subscriptions</description>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>chargebeeapps__Subscription_Plan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CB Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Oppurtunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription vs Opp</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CB Subscriptions</relationshipLabel>
        <relationshipName>CB_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Site</label>
        <referenceTo>chargebeeapps__CB_Sites__c</referenceTo>
        <relationshipLabel>CB Subscriptions</relationshipLabel>
        <relationshipName>CB_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Subscription_Id__c</fullName>
        <label>CB Subscription Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Cancel_Reason__c</fullName>
        <description>Cancel Reason</description>
        <label>Reason for cancellation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>chargebeeapps__CB_Subscription_Cancel_reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Chargebee_Modified_Time__c</fullName>
        <description>Chargebee modified time</description>
        <label>Chargebee Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Company__c</fullName>
        <description>CB Company</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CB Subscriptions</relationshipLabel>
        <relationshipName>CB_Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Company_name__c</fullName>
        <description>Shipping Address company</description>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Current_Term_End__c</fullName>
        <description>Current Term End</description>
        <label>Current Term End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Current_Term_Start__c</fullName>
        <description>Current Term Start</description>
        <label>Current Term Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__CustomerID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CB subscription CustomerID</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CB Subscriptions</relationshipLabel>
        <relationshipName>CB_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Due_Invoices_Count__c</fullName>
        <description>Due Invoices Count</description>
        <label>Due Invoices Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Due_Since__c</fullName>
        <description>Due Since</description>
        <label>Due Since</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__First_Name__c</fullName>
        <description>Shipping address first name</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Last_Name__c</fullName>
        <description>Shipping address last name</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__MRR__c</fullName>
        <description>MRR</description>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Next_billing_Amount__c</fullName>
        <description>Next billing Amount</description>
        <label>Next billing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Next_billing__c</fullName>
        <description>Next billing at</description>
        <label>Next billing at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__PO_Number__c</fullName>
        <description>PO Number</description>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Plan_Quantity__c</fullName>
        <label>Plan Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Plan_Unit_Price__c</fullName>
        <description>Plan Unit Price</description>
        <label>Plan Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Remaining_Billing_Cycles__c</fullName>
        <label>Remaining Billing Cycles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Setup_Fee__c</fullName>
        <description>Setup Fee</description>
        <label>Setup Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Shipping_Email__c</fullName>
        <description>Shipping email address</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Shipping_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Shipping_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Shipping_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Shipping_Phone__c</fullName>
        <description>Shipping phone</description>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Site__c</fullName>
        <description>Chargebee Site</description>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__State__c</fullName>
        <label>State/ County/ Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Subcription_Activated_At__c</fullName>
        <description>Subcription Activated At</description>
        <label>Subcription Activated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Subcription_Cancelled_At__c</fullName>
        <description>Subcription Cancelled At</description>
        <label>Subcription Cancelled At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__SubscriptionId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>CB Subscription Id</description>
        <externalId>true</externalId>
        <label>Subscription Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>chargebeeapps__Subscription_Created_At__c</fullName>
        <description>Subscription Created At</description>
        <label>Subscription Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Subscription_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription Plan</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>CB Subscriptions</relationshipLabel>
        <relationshipName>CB_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Subscription_Started_At__c</fullName>
        <description>Subscription Started At</description>
        <label>Subscription Started At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Subscription_status__c</fullName>
        <label>Subscription status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>chargebeeapps__CB_Subscription_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Total_Dues__c</fullName>
        <description>Total Dues</description>
        <label>Total Dues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Trail_End__c</fullName>
        <description>Trail End</description>
        <label>Trial End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Trial_Start__c</fullName>
        <description>Trial Start</description>
        <label>Trial Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Zip_Code__c</fullName>
        <label>Zip/ Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>CB Subscription</label>
    <listViews>
        <fullName>Active_Subscriptions</fullName>
        <columns>NAME</columns>
        <columns>chargebeeapps__Company__c</columns>
        <columns>chargebeeapps__CB_Subscription_Id__c</columns>
        <columns>chargebeeapps__Current_Term_Start__c</columns>
        <columns>chargebeeapps__Current_Term_End__c</columns>
        <columns>chargebeeapps__MRR__c</columns>
        <columns>chargebeeapps__CB_Oppurtunity__c</columns>
        <columns>chargebeeapps__Total_Dues__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>chargebeeapps__Subscription_Plan__c</columns>
        <columns>Product_Name__c</columns>
        <columns>chargebeeapps__Subscription_status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>chargebeeapps__Subscription_status__c</field>
            <operation>equals</operation>
            <value>ACTIVE,NON_RENEWING</value>
        </filters>
        <label>Active Subscriptions</label>
    </listViews>
    <listViews>
        <fullName>chargebeeapps__All</fullName>
        <columns>NAME</columns>
        <columns>chargebeeapps__CB_Oppurtunity__c</columns>
        <columns>chargebeeapps__CustomerID__c</columns>
        <columns>chargebeeapps__Company__c</columns>
        <columns>chargebeeapps__MRR__c</columns>
        <columns>chargebeeapps__Due_Invoices_Count__c</columns>
        <columns>chargebeeapps__Next_billing__c</columns>
        <columns>chargebeeapps__Subscription_status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>chargebeeapps__CB_Sub</fullName>
        <columns>chargebeeapps__Company_name__c</columns>
        <columns>chargebeeapps__SubscriptionId__c</columns>
        <columns>chargebeeapps__Subscription_Plan__c</columns>
        <columns>chargebeeapps__MRR__c</columns>
        <columns>chargebeeapps__PO_Number__c</columns>
        <columns>chargebeeapps__CB_Oppurtunity__c</columns>
        <columns>chargebeeapps__Subscription_status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>chargebeeapps__Current_Term_End__c</columns>
        <columns>chargebeeapps__Next_billing_Amount__c</columns>
        <columns>NAME</columns>
        <columns>chargebeeapps__Trial_Start__c</columns>
        <filterScope>Everything</filterScope>
        <label>CB Sub</label>
    </listViews>
    <nameField>
        <label>CB Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>